syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;

message Transfers {
    repeated Transfer transfers = 1;
}

message Transfer {
    string tx_hash = 1;
    uint32 index = 2;
    google.protobuf.Timestamp block_time = 3;
    uint64 block_number = 4;
    bytes from = 5;
    bytes to = 6;
    string token_id = 7;
}
